# kalshi-market-maker

./: .gitignore  BETTER_PRICING.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  config-demo.json  config.example.json  config.json  secrets.example.json
.claude/skills/commit-groups/: SKILL.md
.github/workflows/: ci.yml
api-keys/: Mac-demo.txt  config-demo-mac.json
benchmark/: CMakeLists.txt
benchmark/source/: benchmark.cpp
capture/: rest.jsonl  session.jsonl
cmake/: benchmark.cmake  dev-mode.cmake  docs.cmake  httplib.cmake  ixwebsocket.cmake  json.cmake  spdlog.cmake
deploy/: README.md  claude-rc.service  kalshi-alert.service  kalshi-mm.service  kalshi-notify-failure.service  logrotate-kalshi  setup.sh
docs/: AWS_SETUP.md  BETTER_PRICING.md  Doxyfile  GUARDS.md  KALSHI_API_REFERENCE.md  MARKET_STRUCTURE.md  PRE_LIVE_CHECKLIST.md  architecture.md  dev-setup.md  kalshi-api-endpoints.md  kalshi-api.md  testing.md
docs/adr/: 001-http-client.md  002-timestamp-parsing.md  003-websocket-library.md  004-json-library.md  005-tdd-approach.md  006-trading-session-engine.md  007-process-per-strategy-and-aggregator.md
docs/archive/: PLAN-2026-07-04-full.md  PLAN-2026-07-18-full.md  kalshi-api-2026-06-21.md
docs/papers/: README.md  krause-microstructure.md
scripts/: alert_watch.py  analyze_fills.py  backtest_fv_candles.py  check_layer_includes.py  fill_intensity.py  fill_model_check.py  install-hooks.sh  kyle_lambda.py  latency_report.py  microstructure_report.py  pin_estimate.py  pnl_attribution.py  pre-commit  run.sh  run_ab.sh  run_capture.sh  run_demo.sh  run_when_live.sh  scan.sh  settlement_join.py  trade.sh
scripts/lib/: common.sh
source/: CMakeLists.txt  add.hpp  adverse_selection.cpp  adverse_selection.hpp  analytics.cpp  analytics.hpp  app_modes.cpp  app_modes.hpp  auth.cpp  auth.hpp  capture.cpp  capture.hpp  cli.cpp  cli.hpp  clock_skew.cpp  clock_skew.hpp  config.cpp  config.hpp  ensure.cpp  fair_value.cpp  fair_value.hpp  flow_imbalance.cpp  flow_imbalance.hpp  fv_backtest.cpp  fv_backtest.hpp  http_transport.cpp  http_transport.hpp  logger.cpp  logger.hpp  main.cpp  order_manager.cpp  order_manager.hpp  order_manager_iface.hpp  orderbook.cpp  orderbook.hpp  paper_transport.cpp  paper_transport.hpp  portfolio.cpp  portfolio.hpp  pricing_model.cpp  (+22 more)
source/app/: app_modes.cpp  app_modes.hpp  config.cpp  config.hpp  main.cpp
source/core/: cli.cpp  cli.hpp  ensure.cpp  ensure.hpp  logger.cpp  quantity.hpp  rate_limiter.cpp  rate_limiter.hpp  types.hpp
source/engine/: analytics.cpp  analytics.hpp  drift_estimator.cpp  drift_estimator.hpp  event_pump.cpp  event_pump.hpp  fair_value.cpp  fair_value.hpp  flow_imbalance.cpp  flow_imbalance.hpp  flow_imbalance_config.hpp  order_manager_iface.hpp  orderbook.cpp  orderbook.hpp  portfolio.cpp  portfolio.hpp  pricing_model.cpp  pricing_model.hpp  risk_limits.hpp  risk_manager.cpp  risk_manager.hpp  strategy.hpp  theo_grid.cpp  theo_grid.hpp  trade_tape.cpp  trade_tape.hpp  trading_session.cpp  trading_session.hpp
source/exchange/: order_manager.cpp  order_manager.hpp  rest_client.cpp  rest_client.hpp  scan_output.cpp  scan_output.hpp  scanner_config.hpp  ticker_scanner.cpp  ticker_scanner.hpp
source/net/: auth.cpp  capture.cpp  capture.hpp  http_transport.cpp  http_transport.hpp  paper_transport.cpp  paper_transport.hpp  websocket_client.cpp  websocket_client.hpp
source/strategy/: quoter.cpp  quoter.hpp  quoter_config.hpp
source/tooling/: fv_backtest.cpp  fv_backtest.hpp
test/: CMakeLists.txt
test/fixtures/: session_synthetic.jsonl
test/fuzz/: CMakeLists.txt  parse_ws_message_fuzz.cpp
test/integration/: demo_conformance_test.cpp  replay_session_test.cpp
test/replay/: replay_test.cpp
test/source/: add_test.cpp  adverse_selection_test.cpp  analytics_test.cpp  app_modes_test.cpp  auth_test.cpp  capture_test.cpp  clearing_price_model_test.cpp  cli_test.cpp  clock_skew_test.cpp  config_test.cpp  drift_estimator_test.cpp  ensure_test.cpp  event_pump_test.cpp  fair_value_test.cpp  fake_order_manager.hpp  fake_strategy.hpp  fake_transport.hpp  fake_websocket.hpp  flow_imbalance_config_test.cpp  flow_imbalance_test.cpp  fv_backtest_test.cpp  logger_test.cpp  main_loop_test.cpp  order_manager_iface_test.cpp  order_manager_test.cpp  orderbook_test.cpp  paper_transport_test.cpp  portfolio_test.cpp  pricing_model_test.cpp  quantity_test.cpp  quoter_config_test.cpp  quoter_reprice_test.cpp  quoter_test.cpp  quoter_test_util.hpp  rate_limiter_test.cpp  rest_client_test.cpp  risk_limits_test.cpp  risk_manager_test.cpp  scan_output_test.cpp  scanner_config_test.cpp  (+8 more)
